--- a/config.json
+++ b/config.json
@@ -1,9 +1,10 @@
 {
   "num_heads":  4,
   "lr":         1e-2,
-  "epochs":     50,
+  "epochs":     500,
   "batch_size": 1,
-  "test_every": 5,
+  "test_every": 25,
   "num_encoder_layers": 0,
-  "num_decoder_layers": 5
+  "num_decoder_layers": 5,
+  "data_path": "data"
 }
