--- a/config.json
+++ b/config.json
@@ -1,11 +1,13 @@
 {
   "num_heads":  4,
   "lr":         1e-4,
-  "epochs":     100,
+  "epochs":     "inf",
   "batch_size": 1,
   "test_every": 1,
   "num_encoder_layers": 0,
   "num_decoder_layers": 5,
   "train_data_path": "data",
-  "test_data_path": "data"
+  "test_data_path": "data",
+  "model_save_name": "best_run_test",
+  "model_state_path": "None"
 }
