--- a/config_final.json
+++ b/config_final.json
@@ -1,14 +1,16 @@
 {
   "num_heads":  8,
-  "lr":         1e-2,
-  "epochs":     50,
-  "test_every": 50,
+  "lr":         1e-3,
+  "epochs":     "inf",
+  "test_every": 1,
+  "fig_every": 100,
   "train_data_path": "data",
   "test_data_path": "data",
   "model_save_name": "None",
   "model_load_path": "None",
-  "trainer_save_path": "trainer_save_test",
-  "figs_path": "fig",
+  "trainer_save_path": "test_train",
   "trainer_load_path": "None",
+  "figs_path": "fig",
   "batch_size": 1
 }
+
